# Finance_Assistant_Blueprint-main_2

./: README.md
.github/workflows/: docker-image.yml
Finance_Assistant_Blueprint-main/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
Finance_Assistant_Blueprint-main/.github/: pull_request_template.md
Finance_Assistant_Blueprint-main/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Finance_Assistant_Blueprint-main/.github/workflows/: ci.yml  deploy-infra.yml  deploy-services.yml  model-eval.yml
Finance_Assistant_Blueprint-main/docs/adr/: ADR-001-core-technology-stack.md  ADR-003-qldb-replacement.md  AI-Finance-Assistant-App-Blueprint.md  AI-Finance-Assistant-System-Blueprint.md
Finance_Assistant_Blueprint-main/docs/project-management/: github-project-board.md
Finance_Assistant_Blueprint-main/docs/sprints/: recurring-sprint-checklist.md
Finance_Assistant_Blueprint-main/frontend/: next.config.ts  package-lock.json  package.json
Finance_Assistant_Blueprint-main/frontend/src/app/: globals.css  layout.tsx  providers.tsx
Finance_Assistant_Blueprint-main/frontend/src/app/(dashboard)/: layout.tsx  page.tsx
Finance_Assistant_Blueprint-main/frontend/src/components/layout/: sidebar.tsx  topbar.tsx
Finance_Assistant_Blueprint-main/frontend/src/components/ui/: meridian-logo.tsx
Finance_Assistant_Blueprint-main/infrastructure/terraform/envs/dev/: main.tf
Finance_Assistant_Blueprint-main/infrastructure/terraform/global/: main.tf
Finance_Assistant_Blueprint-main/infrastructure/terraform/modules/aurora/: main.tf  outputs.tf  variables.tf
Finance_Assistant_Blueprint-main/infrastructure/terraform/modules/cognito/: main.tf  outputs.tf  variables.tf
Finance_Assistant_Blueprint-main/infrastructure/terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
Finance_Assistant_Blueprint-main/infrastructure/terraform/modules/redis/: main.tf  outputs.tf  variables.tf
Finance_Assistant_Blueprint-main/infrastructure/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
Finance_Assistant_Blueprint-main/infrastructure/terraform/modules/waf/: main.tf  variables.tf
Finance_Assistant_Blueprint-main/monitoring/grafana/dashboards/: meridian-api.json
Finance_Assistant_Blueprint-main/services/api-gateway/finance_assistant/: __init__.py  audit.py  cache.py  config.py  core.py  database.py  exceptions.py  logging.py  main.py  middleware.py  schemas.py  telemetry.py
Finance_Assistant_Blueprint-main/services/api-gateway/finance_assistant/ai/: __init__.py  embeddings.py  evaluation.py  guardrails.py  hybrid_search.py  ingestion.py  llm.py  prompts.py  retriever.py  semantic_cache.py
Finance_Assistant_Blueprint-main/services/api-gateway/finance_assistant/auth/: __init__.py  api_keys.py  dependencies.py  jwt.py
Finance_Assistant_Blueprint-main/services/api-gateway/finance_assistant/models/: __init__.py  account.py  ai.py  anomaly.py  base.py  budget.py  category.py  embedding.py  transaction.py  user.py
Finance_Assistant_Blueprint-main/services/api-gateway/finance_assistant/routes/: __init__.py  chat.py  documents.py  health.py
Finance_Assistant_Blueprint-main/services/api-gateway/migrations/: env.py
Finance_Assistant_Blueprint-main/services/api-gateway/migrations/versions/: 0001_initial_schema.py
Finance_Assistant_Blueprint-main/services/api-gateway/tests/: conftest.py  test_auth.py  test_core.py  test_guardrails.py  test_health.py  test_ingestion.py  test_models.py  test_prompts.py  test_schemas.py
Finance_Assistant_Blueprint-main/services/api-gateway/tests/load/: locustfile.py
(+10 files in other folders)
