[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridian"
version = "0.1.0"
description = "Enterprise Multi-Region RAG Platform for Financial Intelligence"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Mahmoud Heshmat" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "pydantic>=2.8.0,<3.0",
    "pydantic-settings>=2.4.0,<3.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0",
    "asyncpg>=0.29.0,<1.0",
    "alembic>=1.13.0,<2.0",
    "redis>=5.0.0,<6.0",
    "httpx>=0.27.0,<1.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0,<4.0",
    "boto3>=1.34.0,<2.0",
    "pgvector>=0.3.0,<1.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "prometheus-client>=0.20.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipython>=8.0.0",
]
test = [
    "pytest>=8.2.0,<9.0",
    "pytest-cov>=5.0.0,<6.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "httpx>=0.27.0",  # for TestClient
    "testcontainers[postgres,redis]>=4.7.0",
    "factory-boy>=3.3.0,<4.0",
]
ai = [
    "langchain>=0.2.0,<1.0",
    "langchain-aws>=0.1.0,<1.0",
    "langchain-community>=0.2.0,<1.0",
    "ragas>=0.1.10,<1.0",
    "tiktoken>=0.7.0,<1.0",
]

[project.urls]
Repository = "https://github.com/mahmoudheshmat/meridian"
Documentation = "https://github.com/mahmoudheshmat/meridian/tree/main/docs"

# ============================================================
# Tool Configuration
# ============================================================

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["services"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",  # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"**/conftest.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["finance_assistant"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "redis.*",
    "pgvector.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "services/api-gateway/tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=services",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.coverage.run]
branch = true
source = ["services"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
